# django-package-template

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-cd.yml
scripts/: create_example_project.sh  release.sh
